--- a/docker/authentik/docker-compose.yml
+++ b/docker/authentik/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     restart: unless-stopped
     depends_on:
       - postgresql
-    entrypoint:
+    environment:
       - ADMINER_DEFAULT_SERVER=postgresql
     ports:
       - "8210:8080"
