--- a/docker/authentik/docker-compose.yml
+++ b/docker/authentik/docker-compose.yml
@@ -26,14 +26,14 @@ services:
     restart: unless-stopped
     depends_on:
       - postgresql
-    #environment:
-    #  - ADMINER_DEFAULT_SERVER=postgresql
+    environment:
+      - ADMINER_DEFAULT_SERVER=postgresql
     ports:
       - "8210:8080"
     networks:
       - backend-network
   server:
-    image: ghcr.io/goauthentik/server:2025.12.1
+    image: ghcr.io/goauthentik/server:2025.10.2
     restart: unless-stopped
     command: server
     container_name: authentik-proxy
@@ -80,7 +80,7 @@ services:
       - backend-network
 
   worker:
-    image: ghcr.io/goauthentik/server:2025.12.1
+    image: ghcr.io/goauthentik/server:2025.10.2
     restart: unless-stopped
     command: worker
     environment:
