--- a/docker/apps/ollama/continue/config.yaml
+++ b/docker/apps/ollama/continue/config.yaml
@@ -1,85 +1,85 @@
-name: Local Homelab Assistant (2025)
-version: 1.0.0
+name: Local Fullstack Architect Assistant
+version: 2.0.0
 schema: v1
 
 models:
-  # ── MAIN CODING MODELS (chat + edit + apply) ─────────────────────
-  - name: Qwen2.5-Coder 20B (Microsoft NextCoder)
+  # ───── PRIMARY FULLSTACK CODING ─────
+  - name: DeepSeek Coder V2 16B (Primary)
     provider: ollama
-    model: hf.co/mradermacher/Qwen2.5-Microsoft-NextCoder-Brainstorm20x-128k-ctx-20B-GGUF:Q4_K_S
+    model: deepseek-coder-v2:16b-lite-instruct-q5_K_M
     apiBase: http://192.168.20.31:11434
-    roles:
-      - chat
-      - edit
-      - apply
-    title: "Qwen2.5 20B · Best for PHP/Laravel/Symfony + .NET Core"
+    roles: [chat, edit, apply]
 
-  - name: DeepSeek-Coder R1 8B
+  # ───── BACKEND / OOP SPECIALIST ─────
+  - name: CodeLlama 13B (Backend)
+    provider: ollama
+    model: codellama:13b-instruct-q5_K_M
+    apiBase: http://192.168.20.31:11434
+    roles: [chat, edit, apply]
+
+  # ───── DATABASE EXPERT ─────
+  - name: SQLCoder 15B (Database)
+    provider: ollama
+    model: sqlcoder:15b-q5_K_M
+    apiBase: http://192.168.20.31:11434
+    roles: [chat, edit]
+
+  # ───── FRONTEND / JS / TS ─────
+  - name: Yi Coder 9B (Frontend)
+    provider: ollama
+    model: yi-coder:9b-chat-q5_K_M
+    apiBase: http://192.168.20.31:11434
+    roles: [chat, edit, apply]
+
+  # ───── ARCHITECTURE & REASONING ─────
+  - name: DeepSeek R1 8B (Reasoning)
     provider: ollama
     model: deepseek-r1:8b
     apiBase: http://192.168.20.31:11434
-    roles:
-      - chat
-      - edit
-      - apply
-      - autocomplete          # excellent FIM support
+    roles: [chat]
+
+  # ───── FAST AUTOCOMPLETE ─────
+  - name: Qwen 2.5 Coder 7B (Autocomplete)
+    provider: ollama
+    model: qwen2.5-coder:7b-instruct-q4_K_M
+    apiBase: http://192.168.20.31:11434
+    roles: [autocomplete]
     completionOptions:
       fillInTheMiddle: true
-    title: "DeepSeek 8B · React/Angular/TypeScript beast"
 
-  - name: NT-Java 1.1B (Spring Boot specialist)
+  # ───── LIGHT CHAT / ENGLISH LEARNING ─────
+  - name: Gemma 3 4B (Light Chat)
     provider: ollama
-    model: hf.co/infosys/NT-Java-1.1B-GGUF:Q4_K_M
+    model: gemma3:4b
     apiBase: http://192.168.20.31:11434
-    roles:
-      - autocomplete
-      - chat
-    completionOptions:
-      fillInTheMiddle: true
-    title: "NT-Java · Ultra-fast Java/Spring Boot autocomplete"
+    roles: [chat]
 
-  - name: Qwen2.5-Coder 1.5B (lightning autocomplete)
+  - name: Llama 3.2 3B (Ultra Fast)
     provider: ollama
-    model: hf.co/unsloth/Qwen2.5-Coder-1.5B-Instruct-128K-GGUF:Q4_K_M
+    model: llama3.2:3b
     apiBase: http://192.168.20.31:11434
-    roles:
-      - autocomplete
-    completionOptions:
-      fillInTheMiddle: true
-    title: "Qwen2.5 1.5B · Instant autocomplete fallback"
+    roles: [chat]
 
-  # ── TERMINAL / SYSADMIN (Linux, Docker, Proxmox) ─────────────────
-  - name: Phi-3.5 Mini (Terminal Agent)
+  # ───── HEAVY REFACTOR / LARGE TASKS ─────
+  - name: Qwen3 Coder 30B (Heavy Duty)
     provider: ollama
-    model: hf.co/microsoft/Phi-3.5-mini-instruct-GGUF:Q4_K_M
+    model: hf.co/unsloth/Qwen3-Coder-30B-A3B-Instruct-GGUF:Q2_K_L
     apiBase: http://192.168.20.31:11434
-    roles:
-      - chat
-    title: "Phi-3.5 Mini · Instant Docker/Proxmox/Linux answers"
+    roles: [chat, edit, apply]
 
-  # ── IMAGE / OCR (screenshots, error UIs, diagrams) ───────────────
-  - name: olmOCR 7B (Vision + OCR)
+  # ───── SEARCH / RAG ─────
+  - name: Nomic Embed Text v1.5
     provider: ollama
-    model: hf.co/bartowski/allenai_olmOCR-2-7B-1025-GGUF:Q8_0
+    model: nomic-embed-text:v1.5
     apiBase: http://192.168.20.31:11434
-    roles:
-      - chat
-    title: "olmOCR · Explain screenshots, error messages, Proxmox UI"
+    roles: [embed]
 
-  # ── EMBEDDINGS & RERANKER (codebase search @codebase) ────────────
-  - name: Qwen3 Embedding 0.6B (SOTA multilingual + code)
+  - name: BGE Reranker v2-m3 (Q8)
     provider: ollama
-    model: hf.co/Qwen/Qwen3-Embedding-0.6B-GGUF:Q8_0
+    model: hf.co/l-nmch/bge-reranker-v2-m3-Q8_0-GGUF:Q8_0
     apiBase: http://192.168.20.31:11434
-    roles:
-      - embed
+    roles: [rerank]
 
-  - name: BGE Reranker v2-m3
-    provider: ollama
-    model: hf.co/gpustack/bge-reranker-v2-m3-GGUF:Q4_K_M
-    apiBase: http://192.168.20.31:11434
-    roles:
-      - rerank
 
 # ── CONTEXT PROVIDERS (all the good stuff) ───────────────────────
 context:
@@ -142,8 +142,8 @@ prompts:
 
 
 # ── GLOBAL DEFAULTS (optional but recommended) ───────────────────
-defaultModel: Qwen2.5-Coder 20B (Microsoft NextCoder)
+defaultModel: DeepSeek Coder V2 16B (Primary)
 embeddingsProvider: ollama
 rerankers:
   - provider: ollama
-    model: hf.co/gpustack/bge-reranker-v2-m3-GGUF:Q4_K_M
+    model: hf.co/l-nmch/bge-reranker-v2-m3-Q8_0-GGUF:Q8_0
