--- a/docker/apps/ollama/docker-compose.yml
+++ b/docker/apps/ollama/docker-compose.yml
@@ -9,15 +9,27 @@ services:
     ports:
       - 11434:11434
     environment:
-      - OLLAMA_HOST=0.0.0.0:11434          # 2025 syntax
+      # Network
+      - OLLAMA_HOST=0.0.0.0:11434
       - OLLAMA_ORIGINS=*
-      - OLLAMA_FLASH_ATTENTION=1
-      - OLLAMA_MAX_LOADED_MODELS=1
-      - OLLAMA_NUM_PARALLEL=4             # 4060 Ti 16 GB eats 4 concurrent requests for breakfast
+      # GPU
       - NVIDIA_VISIBLE_DEVICES=all
+      # Performance
+      - OLLAMA_FLASH_ATTENTION=1
       - OLLAMA_CONTEXT_LENGTH=8192
+      # Memory control (important for 16GB VRAM)
+      - OLLAMA_MAX_LOADED_MODELS=2
+      - OLLAMA_NUM_PARALLEL=4
+      - OLLAMA_KV_CACHE_TYPE=q8_0
     restart: unless-stopped
     runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [ gpu ]
     networks:
       - ai_network
 
@@ -36,20 +48,22 @@ services:
       - OLLAMA_BASE_URL=http://ollama:11434
       - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
       - ENABLE_SIGNUP=${WEBUI_ENABLE_SIGNUP}
+      - SCARF_ANALYTICS=false
+
+      # RAG (local & fast)
+      - ENABLE_RAG_WEB_SEARCH=true
+      - RAG_EMBEDDING_MODEL=nomic-embed-text:v1.5
+      - RAG_RERANKING_MODEL=hf.co/l-nmch/bge-reranker-v2-m3-Q8_0-GGUF:Q8_0
+      - RAG_TOP_K=15
+      - RAG_CHUNK_SIZE=1024
 
       # Productivity turbo-chargers
-      - DEFAULT_MODELS=hf.co/mradermacher/Qwen2.5-Microsoft-NextCoder-Brainstorm20x-128k-ctx-20B-GGUF:Q4_K_S,deepseek-r1:8b,hf.co/microsoft/Phi-3.5-mini-instruct-GGUF:Q4_K_M
       - WEBUI_NAME=Local Architect Brain
       - ENABLE_RAG_WEB_SEARCH=true                     # Search your own docs + web when needed
       - ENABLE_IMAGE_GENERATION=true                  # You don’t want Flux here – keep it clean
       - ENABLE_COMMUNITY_MODEL_SHARING=false
       - ENABLE_MODEL_FILTER=true
-      - RAG_EMBEDDING_MODEL=hf.co/Qwen/Qwen3-Embedding-0.6B-GGUF:Q4_K_M
-      - RAG_RERANKING_MODEL=hf.co/BAAI/bge-reranker-v2-m3-GGUF:Q4_K_M
-      - RAG_TOP_K=15
-      - RAG_CHUNK_SIZE=1024
-      - ENABLE_OPENAPI=true                            # Use with Raycast/Alfred shortcuts
-      - SCARF_ANALYTICS=false                          # Disable telemetry
+      - ENABLE_OPENAPI=true
     extra_hosts:
       - "host.docker.internal:host-gateway"            # Allows WebUI to reach your host services if needed
     depends_on:
@@ -57,28 +71,6 @@ services:
     restart: unless-stopped
     networks:
       - ai_network
-
-  code-server:
-    image: lscr.io/linuxserver/code-server:latest
-    container_name: code-server
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-      - PASSWORD=${CODE_SERVER_PASSWORD}
-      - SUDO_PASSWORD=${CODE_SERVER_SUDO_PASSWORD}
-    volumes:
-      - code_server_data:/config
-      - ollama_data:/root/.ollama:ro
-      - "/etc/localtime:/etc/localtime:ro"
-      - "/etc/timezone:/etc/timezone:ro"
-    ports:
-      - "8443:8443"
-    restart: unless-stopped
-    networks:
-      - ai_network
-    labels:
-      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
 
 volumes:
   ollama_data:
